# paq1-lib-storage

./: .gitignore  Cargo.toml  README.md  TODO.md  tarpaulin-report.html
core/: Cargo.toml
core/src/: lib.rs  prelude.rs
core/src/daos/: mod.rs
core/src/data/: mod.rs
core/src/query/: mod.rs
core/src/repositories/: crud_repo.rs  mod.rs  repository.rs
core/tests/unit_tests/: mod.rs
core/tests/unit_tests/repositories/: mock_dao.rs  mod.rs
infra/: Cargo.toml
infra/src/: lib.rs  prelude.rs
infra/src/daos/mongo/: database.rs  identifier.rs  mod.rs  mongo_dao.rs
infra/src/query/: mod.rs
infra/src/repositories/: mod.rs
infra/tests/: run_integration_tests.rs
infra/tests/integration_tests/: mod.rs  settings.rs
infra/tests/integration_tests/config/: default.toml
infra/tests/integration_tests/mongo/: dao_spec.rs  dbo_model.rs  mod.rs  setup.rs
infra/tests/unit_tests/query/: mod.rs
paq1_storage_core/: Cargo.toml
paq1_storage_core/src/: lib.rs  prelude.rs
paq1_storage_core/src/daos/: mod.rs
paq1_storage_core/src/data/: entity.rs  event.rs  mod.rs  paged.rs  quick_search.rs
paq1_storage_core/src/query/: mod.rs
paq1_storage_core/src/repositories/: crud_repo.rs  repository.rs
paq1_storage_core/tests/: run_unit_tests.rs
paq1_storage_core/tests/unit_tests/: mod.rs
paq1_storage_core/tests/unit_tests/repositories/: mock_dao.rs  mod.rs
paq1_storage_infra/: Cargo.toml
paq1_storage_infra/src/: lib.rs  prelude.rs
paq1_storage_infra/src/daos/mongo/: database.rs  entity.rs  event.rs  identifier.rs  mod.rs  mongo_dao.rs
paq1_storage_infra/src/query/: mod.rs
paq1_storage_infra/src/repositories/: mod.rs
paq1_storage_infra/tests/integration_tests/: mod.rs  settings.rs
paq1_storage_infra/tests/integration_tests/config/: dev.toml
paq1_storage_infra/tests/integration_tests/mongo/: dao_spec.rs  dbo_model.rs  mod.rs  setup.rs
paq1_storage_infra/tests/unit_tests/query/: mod.rs
src/: lib.rs
