[workspace]
resolver = "2"
members = ["paq1_storage_core", "paq1_storage_infra"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
async-trait = { version = "0.1.80" }
config = { version = "0.15.8" }
dotenv = { version = "0.15.0" }
paq1-lib-error-handler = { git = "https://github.com/paq1/paq1-lib-error-handler.git", branch = "master", features = ["combine"] }