[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
paq1-lib-error-handler = { git = "https://github.com/paq1/paq1-lib-error-handler.git", branch = "master", features = ["combine"] }
mongodb = { version = "3.2.0", features = ["sync"] }
# uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }

core = { path = "../core" }